# webinar-jaeger

./: README.md  docker-compose.yml  go.work
auth/: Cargo.toml  README.md  build.rs
auth/src/: server.rs
cache/: README.md  go.mod  go.sum  main.go  storage.go
http/: README.md  auth.go  go.mod  go.sum  handlers.go  main.go  storage.go
http/pb/: Makefile  auth.pb.go  auth_grpc.pb.go  storage_grpc.pb.go
http/static/: index.html
proto/: auth.proto  storage.proto
storage/: README.md  go.mod  go.sum  main.go  storage.go
storage/pb/: Makefile  storage.pb.go
