[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth"
path = "src/server.rs"

[dependencies]
tonic = "0.8.1"
prost = "0.11.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
once_cell = "1.15.0"
uuid = { version = "1.1.2", features = ["v4"] }
redis = {version="0.21.6", features=["r2d2"]}
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
protobuf = "3.2.0"
prost-types = "0.11.1"

[build-dependencies]
tonic-build = "0.8"
